The second exercise has been reviewed and answered.

--- a/debugging.ipynb
+++ b/debugging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -367,7 +367,107 @@
     "                   [5, 3, 13, 6, 1],\n",
     "                   [4, 4, 13, 6, 1],\n",
     "                   [6, 5, 13, 16, 1]])\n",
-    "swapped_coords = swap(coords)\n"
+    "swapped_coords = swap(coords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5  5  6  6  0]\n",
+      " [ 3  3  6  6  0]\n",
+      " [ 3  3  6  6  1]\n",
+      " [ 4  4  6  6  1]\n",
+      " [ 5  5 16 16  1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(swapped_coords)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "nbgrader": {
+     "grade": false,
+     "grade_id": "a1f01da3-8770-45ca-8d36-92c35558dd17",
+     "locked": true,
+     "points": 1,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "source": [
+    "<h1 id=\"exercise-2\"><strong>Answer of Excercise 2</strong></h1>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "nbgrader": {
+     "grade": false,
+     "grade_id": "3f04f9e6-5411-42a9-a244-3cf2f1ab3171",
+     "locked": true,
+     "points": 1,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "source": [
+    "<font size=\"3px\">\n",
+    "<p>1. the obvious error is in the following line:</p>\n",
+    "<p><code>coords[:, 0], coords[:, 1], coords[:, 2], coords[:, 3], = coords[:, 1], coords[:, 1], coords[:, 3], coords[:, 2]</code></p>\n",
+    "<p>To solve this error, the code should be updated according to the following example:<br>\n",
+    "<p>coords[:, 0], coords[:, 1], coords[:, 2], coords[:, 3], = coords[:, 1], <code>coords[:, 0]</code>, coords[:, 3], coords[:, 2]</p>\n",
+    "<p>2. After correcting the obvious error, the function still needs to be modified as follows. Once these changes are made, the output will be accurate.</p>\n",
+    "</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def revisedSwap(coords: np.ndarray):\n",
+    "    newCoords = coords.copy()\n",
+    "    newCoords[:, 0], newCoords[:, 1], newCoords[:, 2], newCoords[:, 3], = coords[:, 1], coords[:, 0], coords[:, 3], coords[:, 2]\n",
+    "    return newCoords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5 10  6 15  0]\n",
+      " [ 3 11  6 13  0]\n",
+      " [ 3  5  6 13  1]\n",
+      " [ 4  4  6 13  1]\n",
+      " [ 5  6 16 13  1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "coords = np.array([[10, 5, 15, 6, 0],\n",
+    "                   [11, 3, 13, 6, 0],\n",
+    "                   [5, 3, 13, 6, 1],\n",
+    "                   [4, 4, 13, 6, 1],\n",
+    "                   [6, 5, 13, 16, 1]])\n",
+    "swappedCoords = revisedSwap(coords)\n",
+    "print(swappedCoords)"
    ]
   },
   {
